--- a/style.css
+++ b/style.css
@@ -24,10 +24,10 @@ body {
 }
 
 .key {
-  width: 80px;
-  height: 80px;
+  width: 5rem;
+  height: 5rem;
   border: 2px solid white;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   margin: 2px;
   background: transparent;
   color: white;
@@ -38,6 +38,6 @@ body {
 
 .keyed {
   transform: scale(1.1);
-  border-color: orchid;
+  /* border-color: orchid; */
   box-shadow: 0 0 1.5rem orchid;
 }
